--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,33 +17,21 @@
         </a> 
     </div>
     <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
-        <!-- <form> User Name : <input type="text" id="UserName"> </form>
-            <div class="divider"></div>
-        <form> Email : <input type="text" id="Email"> </form>
-            <div class="divider"></div>
-        <form> Password : <input type="text" id="Password"> </form>
-            <div class="divider"></div>
-        <form> Confirm Password : <input type="text" id="ConfirmPassword"> </form>
-            <div class="divider"></div>
-            <div>
-                <input type="checkbox" id="privacy" name="privacy">
-                <label for="privacy">I have read and accept the </label>
-                <a target="_blank" href = "/gdprPage" >Privacy policy</a>
-              </div> -->
-       
+        <div class="divider"></div>      
         <form action="/register" method="POST">
             <input type="name" id="name" name="name" placeholder="Username" size="25" /><br><br>
             <input type="email" id="email" name="email" placeholder="johndoe@gmail.com" size="25" /><br><br>
             <input type="password" id="password" name="password" placeholder="password" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br><br>
-            <!--
-            <input type="text" id="ConfirmPassword" placeholder="Confirm password" size="25"><br><br>
-            <input type="checkbox" id="privacy" name="privacy"> <br>
-            <label for="privacy">I have read and accepted the </label> <br>
-            <a target="_blank" href = "/gdprPage" >privacy policy</a> -->
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="password" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br><br>
+            <div>
+                <input type="checkbox" id="privacy" name="privacy">
+                <label for="privacy">I have read and accept the </label>
+                <a target="_blank" href = "/gdprPage" >Privacy policy</a>
+            </div> 
             <button id="register" class="button">Register</button>
+            <script src="/js/register.js"></script>
         </form>
     </div>
-        <script src="/js/register.js"></script>
     </body>
     <body style="background-color: #f67570;"></body>
 </html>
