--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,7 +16,7 @@
         <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
         </a> 
     </div>
-    <div class="buttonPos" id="userInput" style="display: grid;">
+    <div class="buttonPos" id="userInput" style="display: grid; text-align: center;">
         <div class="divider"></div>      
         <form action="/register" method="POST">
             <input type="name" id="name" name="name" placeholder="Username" size="25" /><br><br>
