--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
                 <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
             </a>
         </div>
-        <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
+        <div class="buttonPos" id="userInput" style="display: grid; text-align: center;">
             <!--<form> User Name : <input type="text" name="UserName"> </form>
                 <div class="divider"></div>
             <form> Password : <input type="text" name="Password"> </form>
