--- a/views/doodlPageGuest.ejs
+++ b/views/doodlPageGuest.ejs
@@ -52,6 +52,7 @@
                             </p>
                         </div>
                         <div id="settingsSliderContainer">
+                            <label id="settingsToolText">Toolbar Size</label>
                             <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
                         </div>
                         <select onchange="selectBackground()" id="selecterBackground">
