--- a/views/doodlPageGuest.ejs
+++ b/views/doodlPageGuest.ejs
@@ -55,6 +55,7 @@
                             <label id="settingsToolText">Toolbar Size</label>
                             <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
                         </div>
+                        <label id="settingsBkgText">Background Colour</label>
                         <select onchange="selectBackground()" id="selecterBackground">
                             <option value="orange">Orange</option>
                             <option value="black">Black</option>
