--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                             X
                         </p>
                     </div>
-                    <p id="settingsBkgText">Background Colour</p>
+                    <label id="settingsBkgText">Background Colour</label>
                     <select onchange="selectBackground()" id="selecterBackground">
                         <option value="orange">Orange</option>
                         <option value="black">Black</option>
