putting settings infront of images

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -33,7 +33,7 @@
             </button>
         </form>
         <div id="settingsBG">
-            <div id="settingsMain">
+            <div id="settingsMain" style="z-index:10;">
                 <p id="settingsTitle">
                     Settings
                 </p>
