putting settings infront of images

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -32,8 +32,8 @@
                 <img src="/images/gallery.png" height="50px" width="50px">
             </button>
         </form>
-        <div id="settingsBG">
-            <div id="settingsMain" style="zIndex: 10;">
+        <div id="settingsBG" style="z-index: 10;">
+            <div id="settingsMain">
                 <p id="settingsTitle">
                     Settings
                 </p>
