fixing text colour on gallery

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -18,17 +18,17 @@
         <script src="/js/gallery.js"></script>
         <div id="generalTools" style="margin-right: 0; margin-left: auto;">
             <form action="/logout" method="get">
-                <button type="submit" id="logoutButton" title="Logout" >
+                <button type="submit" id="logoutButton" class="generalIcons" title="Logout" >
                     <img src="/images/logout.png" height="50px" width="50px">
                 </button>
             </form>
             <form action="/account" method="get">
-                <button type="submit" id="accountButton" title="Account" >
+                <button type="submit" id="accountButton" class="generalIcons" title="Account" >
                     <img src="/images/account.png" height="50px" width="50px">
                 </button>
             </form>
             <form>
-                <button type="button" id="settingsButton" onclick="openSettings()" title="Settings">
+                <button type="button" id="settingsButton" class="generalIcons" onclick="openSettings()" title="Settings">
                     <img src="/images/settings.png" height="50px" width="50px">
                 </button>
             </form>
