--- a/views/account.ejs
+++ b/views/account.ejs
@@ -18,17 +18,17 @@
     </body>
     <div id="generalTools" style="margin-right: 0; margin-left: auto;">
         <form action="/logout" method="get">
-            <button type="submit" id="logoutButton" title="Logout" >
+            <button type="submit" id="logoutButton" class="generalIcons" title="Logout" >
                 <img src="/images/logout.png" height="50px" width="50px">
             </button>
         </form>
         <form>
-            <button type="button" id="settingsButton" onclick="openSettings()" title="Settings">
+            <button type="button" id="settingsButton" class="generalIcons" onclick="openSettings()" title="Settings">
                 <img src="/images/settings.png" height="50px" width="50px">
             </button>
         </form>
         <form action="/gallery" method="get">
-            <button type="submit" id="exitButton" title="Gallery" >
+            <button type="submit" id="exitButton" class="generalIcons" title="Gallery" >
                 <img src="/images/gallery.png" height="50px" width="50px">
             </button>
         </form>
