fixing settings colour on index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
                             break;
                     }
                     document.body.style.backgroundColor = bkgCol;
-                    document.body.style.color = txtCol;
+                    //document.body.style.color = txtCol;
                     
                     let indexButtons = document.getElementsByClassName('button');
 
