--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -48,7 +48,7 @@
                     </div>
                     <label id="settingsBkgText">Background Colour</label>
                     <select onchange="selectBackground()" id="selecterBackground">
-                        <option value="orange">Orange</option>
+                        <option value="orange" selected="selected">Orange</option>
                         <option value="black">Black</option>
                         <option value="white">White</option>
                         <option value="misc">Misc</option>
