allowing saved background to persist across pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,4 +119,7 @@
         </div>
     </body>
     <body style="background-color: #f67570;"></body>
+    <script type="text/javascript">
+        selectBackground();
+    </script>
 </html>
