colouring text on register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -92,7 +92,7 @@
                         genTools[i].style.backgroundColor = bkgCol;
                     }
 
-                    document.getElementById('privacyLabel').style.color = txtCol;
+                    document.getElementById('privacyLabel').color = txtCol;
                 }
             </script>
         </form>
