colouring text on register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -85,7 +85,7 @@
                         indexButtons[i].style.color = txtCol;
                     }
 
-                    document.getElementById('privacyLabel').color = txtCol;
+                    document.getElementById('privacyLabel').style.color = txtCol;
                 }
             </script>
         </form>
