colouring text on all pages

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div style="text-align: center">
-            <h1><%= name %>'s Drawings</h1>
+            <h1 id="accountHeader"><%= name %>'s Drawings</h1>
         </div>
         <input type="hidden" id="doodlData" ></input>
         <script type="text/javascript"> 
