--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div style="text-align: center">
-            <h1>Today's Top Drawings</h1>
+            <h1 id="galleryHeader">Today's Top Drawings</h1>
             <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
         </div>
         <input type="hidden" id="doodlData" ></input>
