colouring text on all pages

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -24,4 +24,47 @@
         </div>
     </body>
     <body style="background-color: #f67570;"></body>
+    <script type="text/javascript">
+        try {
+            let bkgTemp = sessionStorage.getItem('backColorOption');
+            //console.log(bkgTemp);
+            selectBackground();
+        } catch (error) {
+            console.log(error);
+            //console.log("no bkgCol stored.");
+        }
+
+        function selectBackground() {
+            let settingsSelect = parseInt(sessionStorage.getItem('backColorOption'));
+            var bkgCol = "#f67570";
+            var btnCol = "#1565c0";
+            let txtCol = "#ededed";
+            switch (settingsSelect) {
+                case 0:
+                    bkgCol = "#f67570";
+                    btnCol = "#1565c0";
+                    txtCol = "#171717";
+                    break;
+                case 1:
+                    bkgCol = "#171717";
+                    btnCol = "#ededed";
+                    txtCol = "#ededed";
+                    break;
+                case 2:
+                    bkgCol = "#ededed";
+                    btnCol = "#171717";
+                    txtCol = "#171717";
+                    break;
+                case 3:
+                    bkgCol = "#1565c0";
+                    btnCol = "#f67570";
+                    txtCol = "#171717";
+                    break;
+            }
+            document.body.style.backgroundColor = bkgCol;
+            //document.body.style.color = txtCol;
+
+            document.getElementById('reportHeader').style.color = txtCol;
+        }
+    </script>
 </html>
