--- a/views/voting.ejs
+++ b/views/voting.ejs
@@ -14,7 +14,7 @@
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
         </div>
         <div class="buttonPos" id="userInput" style="display: grid;">
-            <h3>What do you think of this image?</h3>
+            <h3 id="votingHeader">What do you think of this image?</h3>
             <div class="row" style ="display:flex; ">
                 <div class="column">
                     <a href="/report"><img src = "/images/report.png" alt="report" id= "reportbtn" ></img></a>
