--- a/views/report.ejs
+++ b/views/report.ejs
@@ -12,7 +12,7 @@
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
         </div>
         <div class="buttonPos" id="userInput" style="display: grid;">
-            <h3>Reason for report:</h3>
+            <h3 id="reportHeader">Reason for report:</h3>
             <form action="/submitReport" method="post">
                 <input id="doodlID" name="doodlID" type="hidden" value=""></input>
                 <textarea id="report" name="report" rows="10" cols="50" placeholder="Please describe the issue..."></textarea>
