--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -187,6 +187,9 @@
             background-color: #f67570;
             border: 0px;
             cursor: pointer;
+            position: absolute;
+            top: 0;
+            left: 0;
           }
           
           #exitButton{
