--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -143,6 +143,16 @@
             top: calc(100%/3);
           }
 
+          #settingsToolText{
+            text-align: left;
+            font-family: sans-serif;
+            font-weight: bold;
+            font-size: 20px;
+            color: black;
+            margin-top: 0px;
+            margin-bottom: 0px;
+          }
+
           #settingsBkgText{
             text-align: left;
             font-family: sans-serif;
